--- a/src/frontend/.env.local
+++ b/src/frontend/.env.local
@@ -2,10 +2,14 @@
 # Use Firebase Emulator Auth URL for local development
 VITE_FIREBASE_API_KEY=demo-api-key
 VITE_FIREBASE_AUTH_DOMAIN=localhost
-VITE_FIREBASE_PROJECT_ID= dev-ecom-test 
-VITE_FIREBASE_STORAGE_BUCKET=
-VITE_FIREBASE_MESSAGING_SENDER_ID=
-VITE_FIREBASE_APP_ID=demo-app-id
+VITE_FIREBASE_PROJECT_ID=dev-ecom-test
+VITE_FIREBASE_STORAGE_BUCKET=dev-ecom-test.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
+VITE_FIREBASE_APP_ID=1:123456789:web:abcdefg12345
+
+# Firestore & Storage Emulators
+VITE_FIRESTORE_EMULATOR_HOST=localhost:8080
+VITE_FIREBASE_STORAGE_EMULATOR_HOST=localhost:9199
 
 # Connect the Auth emulator when running locally
 VITE_FIREBASE_AUTH_EMULATOR_URL=http://localhost:9099
