feat: Implement Firestore product import tool and add feature flag hook
- Added `import.js` to handle importing products from a CSV file into Firestore, including image URL generation based on product attributes.
- Created `serviceAcccountKey.json` for Firebase Admin SDK authentication.
- Updated `package.json` to include `firebase-admin` as a dependency.
- Introduced `useFeatureFlag` hook for managing feature flags from Firebase Remote Config, with a specific hook for the Private Wishlist feature.
- Added `_metadata.json` for Vite dependencies.

--- a/src/frontend/.env.local
+++ b/src/frontend/.env.local
@@ -13,3 +13,6 @@ VITE_FIREBASE_STORAGE_EMULATOR_HOST=localhost:9199
 
 # Connect the Auth emulator when running locally
 VITE_FIREBASE_AUTH_EMULATOR_URL=http://localhost:9099
+
+# Enable emulator mode for frontend
+REACT_APP_USE_EMULATOR=true
