--- a/src/services/wishList/package.json
+++ b/src/services/wishList/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@itsme/service-cart",
+  "name": "@itsme/service-wishlist",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
