feat: update TypeScript configuration for services to support composite builds and declaration files
docs: add integration guide for frontend and backend setup in monorepo

docs: create quick start guide for project installation and development

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 node_modules/
 dist/
 lib/
+*.tsbuildinfo
 
+# Build outputs
+src/app/dist/
+src/packages/*/dist/
+src/services/*/lib/
 
 # Firebase emulator logs and temp files
 firebase-debug.log
