--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "src/services/wishList"
   ],
   "scripts": {
-    "build": "tsc",
-    "dev": "firebase emulators:start",
+    "build": "npm run build:packages && npm run build:services",
+    "build:packages": "npm run build -w @itsme/shared-utils && npm run build -w @itsme/design-system",
+    "build:services": "tsc",
+    "build:app": "npm run build -w @itsme/app",
+    "dev": "npm run dev:app",
+    "dev:app": "npm run dev -w @itsme/app",
+    "dev:full": "concurrently \"npm run dev:app\" \"npm run emulators:start\"",
     "emulators:start": "npm run build && firebase emulators:start",
     "lint": "eslint . --ext .ts,.tsx",
     "test": "vitest"
@@ -25,14 +30,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.3.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.54.0",
-    "firebase-functions": "^7.0.0",
     "firebase-admin": "^12.0.0",
+    "firebase-functions": "^7.0.0",
+    "typescript": "^5.3.0",
     "vitest": "^1.0.0"
   },
   "dependencies": {
-    "firebase-functions": "^7.0.0",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^7.0.0"
   }
 }
