--- a/src/services/catalog/tsconfig.json
+++ b/src/services/catalog/tsconfig.json
@@ -8,10 +8,11 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true
   },
   "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
