--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "dev": "firebase emulators:start",
     "emulators:start": "npm run build && firebase emulators:start",
+    "import-csv": "node scripts/csv-to-firestore/index.js",
     "lint": "eslint . --ext .ts,.tsx",
     "test": "vitest"
   },
@@ -18,7 +19,9 @@
     "eslint": "^8.54.0",
     "firebase-functions": "^7.0.0",
     "firebase-admin": "^12.0.0",
-    "vitest": "^1.0.0"
+    "vitest": "^1.0.0",
+    "csv-parser": "^3.0.0",
+    "csv-parse": "^5.5.0"
   },
   "dependencies": {
     "firebase-functions": "^7.0.0",
