--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.3.0",
     "eslint": "^8.54.0",
-    "firebase-functions": "^7.0.0",
     "firebase-admin": "^12.0.0",
+    "firebase-functions": "^7.0.0",
+    "typescript": "^5.3.0",
     "vitest": "^1.0.0"
   },
   "dependencies": {
-    "firebase-functions": "^7.0.0",
-    "firebase-admin": "^12.0.0"
+    "csv-parse": "^6.1.0",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^7.0.0"
   }
 }
