--- a/src/services/identity/package.json
+++ b/src/services/identity/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@itsme/service-identity",
+  "version": "1.0.0",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
