--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": ["ES2020"],
+    "lib": [
+      "ES2020"
+    ],
     "outDir": "./lib",
     "rootDir": "./",
     "strict": true,
@@ -15,10 +17,23 @@
     "sourceMap": true,
     "baseUrl": ".",
     "paths": {
-      "@services/*": ["src/services/*/src"],
-      "@packages/*": ["src/packages/*/src"]
+      "@services/*": [
+        "src/services/*/src"
+      ],
+      "@packages/*": [
+        "src/packages/*/src"
+      ]
     }
   },
-  "include": ["index.ts", "src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "coverage"]
+  "include": [
+    "index.ts",
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "coverage",
+    "src/packages",
+    "src/app"
+  ]
 }
