--- a/src/packages/design-system/tsconfig.json
+++ b/src/packages/design-system/tsconfig.json
@@ -14,6 +14,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "useDefineForClassFields": false
   },
   "include": ["src/**/*"],
