--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "ES2022",
     "lib": [
       "ES2020"
     ],
@@ -23,8 +23,18 @@
       "@packages/*": [
         "src/packages/*/src"
       ]
-    }
+    },
+    "moduleResolution": "bundler"
   },
-  "include": ["index.ts", "src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "coverage"]
+  "include": [
+    "index.ts",
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "coverage",
+    "src/packages",
+    "src/app"
+  ]
 }
