Refactor product detail, products, and wishlist pages to use Firestore for data retrieval
- Updated `page-product-detail.ts` to fetch product data from Firestore using `getProductById`.
- Refactored product loading logic to handle asynchronous calls and error handling.
- Adjusted product stock and price handling to accommodate new data structure.
- Enhanced UI elements to reflect changes in product data.
- Modified `page-products.ts` to load products from Firestore, supporting category filtering.
- Implemented `getAllProducts` and `getProductsByCategory` functions in `catalog.ts` for API calls.
- Updated `page-wishlist.ts` to load wishlist items from Firestore instead of local mock data.
- Created Firestore functions for product management in `index.ts`, including fetching all products and by category.
- Adjusted product card component to align with new product data structure.

--- a/firebase.json
+++ b/firebase.json
@@ -17,7 +17,7 @@
   },
   "functions": [
     {
-      "source": "lib/services/identity",
+      "source": "lib/services/catalog",
       "codebase": "default",
       "runtime": "nodejs24",
       "disallowLegacyRuntimeConfig": true,
