--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "vitest": "^1.0.0"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "csv-parse": "^6.1.0",
-    "vitest": "^1.0.0",
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^7.0.0"
+    "firebase-functions": "^7.0.0",
+    "vitest": "^1.0.0"
   }
 }
