feat: add admin dashboard with order management functionality
- Implemented `page-admin` component for admin dashboard.
- Added order statistics and order management features.
- Created services for fetching orders and updating order status.
- Implemented admin guard to check user permissions.
- Added loading states and error handling for API calls.
- Included CSV export functionality for orders.

--- a/firebase.json
+++ b/firebase.json
@@ -19,10 +19,38 @@
       }
     ]
   },
-  "functions": {
-    "source": "lib",
-    "runtime": "nodejs20"
-  },
+  "functions": [
+    {
+      "source": "lib/services/cart",
+      "codebase": "cart",
+      "runtime": "nodejs24"
+    },
+    {
+      "source": "lib/services/catalog",
+      "codebase": "catalog",
+      "runtime": "nodejs24"
+    },
+    {
+      "source": "lib/services/identity",
+      "codebase": "identity",
+      "runtime": "nodejs24"
+    },
+    {
+      "source": "lib/services/payments",
+      "codebase": "payments",
+      "runtime": "nodejs24"
+    },
+    {
+      "source": "lib/services/delivery",
+      "codebase": "delivery",
+      "runtime": "nodejs24"
+    },
+    {
+      "source": "lib/services/wishList",
+      "codebase": "wishlist",
+      "runtime": "nodejs24"
+    }
+  ],
   "storage": {
     "rules": "storage.rules"
   },
