feat: Implement Remote Config for user authentication feature and update related services

--- a/remoteconfig.template.json
+++ b/remoteconfig.template.json
@@ -1,1 +1,9 @@
-{}
+{
+  "parameters": {
+    "feature_fe_38_fl_39_user_authentication_enabled": {
+      "description": "Enable/disable user authentication feature",
+      "valueType": "BOOLEAN",
+      "defaultValue": "true"
+    }
+  }
+}
